@@ -7,4 +7,5 @@ INCLUDES = \
 libarikkei_a_SOURCES = \
 	arikkei-dict.c arikkei-dict.h \
 	arikkei-token.c arikkei-token.h \
-	arikkei-strlib.c arikkei-strlib.h
+	arikkei-strlib.c arikkei-strlib.h \
+	arikkei-iolib.c arikkei-iolib.h
